--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY FIRST WED</title>
+    <link rel="stylesheet" href="roy/tin.css">
 </head>
-<body>
+<body><div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quisquam et, ratione assumenda qui rem numquam ipsum doloremque culpa. Delectus labore debitis quo facere, mollitia tenetur repellat exercitationem sed maxime?</p>
+
+
+</div>
     
 </body>
 </html>
