--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
         <h1>github project</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quisquam et, ratione assumenda qui rem numquam ipsum doloremque culpa. Delectus labore debitis quo facere, mollitia tenetur repellat exercitationem sed maxime?</p>
 
+         
+
 
 </div>
+<h1>travel pic </h1>
+        <img src="tom-barrett-M0AWNxnLaMw-unsplash.jpg" alt=" tin pic" width="550px">
     
 </body>
 </html>
